# Kiwi-IE-test

./: .gitignore  .gitmodules
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
analysis/notebooks/: nn.py  processing.ipynb  rolling.ipynb  utils.py
analysis/results/: collision_detection_model.pkl  model_conditions.h5
analysis/scripts/: analysis_signal.py  logger_config.py
analysis/structured_data/: out0_cam.csv  out_0_1.csv  out_1.csv  out_2.csv  out_3.csv  out_4.csv  out_5.csv  out_6.csv  out_roll1.csv  out_roll2.csv  out_roll_normal2.csv  out_roll_normal3.csv  out_roll_normal4.csv
diagrams/: bag2_failures.json  bag4_failures.json  bag5_failures.json  bag6_failures.json  diagnostic_0_failures.json  failures.json
docs/: Documentation.md  homework.md  solutionQA.md
opencv-build/: Dockerfile
rover/: requirements.txt
rover/configs/: nodes_launch.sh
rover/ros2/src/fail_detection_cpp/include/fail_detection_cpp/: fail_detection.hpp
rover/ros2/src/fail_detection_cpp/src/: fail_detection.cpp
rover/ros2/src/fail_detection_py/: package.xml  setup.cfg  setup.py
rover/ros2/src/fail_detection_py/config/: parameters.yaml
rover/ros2/src/fail_detection_py/fail_detection_py/: fail_detection_node.py  logic.py  main.py
rover/ros2/src/fail_detection_py/fail_detection_py/callbacks/: imu_handler.py
rover/ros2/src/fail_detection_py/fail_detection_py/nodes/: fail_detection_node.py
rover/ros2/src/fail_detection_py/fail_detection_py/nodes/models/: model_conditions.tflite  model_conditions_2.h5  model_conditions_original.tflite  model_conditions_wtime2s.tflite  model_conditions_wtime2sy.tflite
rover/ros2/src/fail_detection_py/fail_detection_py/utils/: math_utils.py  time_utils.py
rover/ros2/src/fail_detection_py/test/: test_fail_detection.py
rover/ros2/src/interfaces/: CMakeLists.txt  package.xml
rover/ros2/src/interfaces/include/modules/: speaker.hpp
rover/ros2/src/interfaces/msg/fail_detection/: Fail.msg
rover/ros2/src/interfaces/src/modules/: speaker.cpp
rover/ros2/src/usr_msgs/: CMakeLists.txt
scripts/: alias_script.sh  secret_solution.sh  startRobotics.sh
