<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fail_detection_py</name>
  <version>0.0.0</version>
  <description>
    A ROS 2 Python-based package for detecting failures in robots using IMU data.
  </description>

  <maintainer email="wilmer.garzon@kiwibot.com">Wilmer</maintainer>
  <license>Apache-2.0</license>

  <!-- Build and Execution Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>usr_msgs</depend>
  <depend>tf_transformations</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

