<?xml version="1.0"?>
<package format="2">
  <name>interfaces</name>
  <version>0.0.1</version>
  <description>The interfaces package</description>

  <maintainer email="you@example.com">Your Name</maintainer>

  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>usr_msgs</build_depend>
  <build_depend>rosidl_default_runtime</build_depend> <!-- Add this line -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>usr_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend> <!-- Add this line -->

  <!-- ROSIDL Interface Declaration -->
  <member_of_group>rosidl_interface_packages</member_of_group> <!-- Add this line -->
</package>
